[metadata]
name = ipify
version = 0.1.3
description = Return your ip address, powered by api.ipify.org
author = Alex Macniven
author_email = alex_macniven@icloud.com
license = MIT

[options]
packages = find:
python_requires = ==3.10
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    ipify = ipify.__main__:entrypoint
